--- a/sway-types/Cargo.toml
+++ b/sway-types/Cargo.toml
@@ -16,6 +16,7 @@ lazy_static = "1.4"
 num-bigint = "0.4.3"
 num-traits = "0.2.16"
 serde = { version = "1.0", features = ["derive"] }
+sway-utils = { version = "0.46.1", path = "../sway-utils" }
 thiserror = "1"
 
 [features]
