Fixes missing error on type unification.
While using generic blanket implementation no error was thrown when another
type other than the generic blanket expected type was used.

This was caused by the typechecker being too permissive in UnknownGeneric
unification. The fix changes the unifier to handle unification with the expected
self and generics as special cases.

Closes #5212

--- a/test/src/e2e_vm_tests/test_programs/should_fail/generic_traits/test.toml
+++ b/test/src/e2e_vm_tests/test_programs/should_fail/generic_traits/test.toml
@@ -25,5 +25,19 @@ category = "fail"
 # check: $()impl<T> Returner<T> for Self {
 # check: $()"Self" is not valid in the self type of an impl block
 
+# check: $()my_trait_method() -> Self {
+# check: $()1u64
+# check: $()Mismatched types.
+# check: $()expected: U
+# check: $()found:    u64.
+# check: $()help: Function body's return type does not match up with its return type annotation.
+
+# check: $()my_trait_method(t: T) -> Self {
+# check: $()t
+# check: $()Mismatched types.
+# check: $()expected: U
+# check: $()found:    T.
+# check: $()help: Function body's return type does not match up with its return type annotation.
+
 # check: $()let b = a.set(42);
 # check: $()No method named "set" found for type "FooBarData<u8>".
